Fix z-index of buttons on AfterSchool Form

--- a/app/assets/stylesheets/after_schools.css.scss
+++ b/app/assets/stylesheets/after_schools.css.scss
@@ -28,3 +28,7 @@
   z-index: 1;
   display: block;
 }
+
+#button {
+  z-index: 1;
+}
